--- a/style.css
+++ b/style.css
@@ -21,11 +21,7 @@ nav{
     width: 40px;
     margin-right: -10px;
 }
-.container{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-}
+
 .header h1{
     color: rgb(98, 255, 0);
     font-size: 20px;
@@ -33,7 +29,6 @@ nav{
     margin: 6px 0;
 }
 #p-div{
-    /* border: 1px solid rgb(98, 255, 0); */
     border: white solid 1px;
     margin: 30px 10px;
     padding: 10px;
@@ -55,7 +50,7 @@ nav{
     flex-direction: column;
     gap: 5px;
     align-items: center;
-    margin: 10px 10px;
+    margin: 10px auto;
     padding: 20px 5px;
     width: 70%;
     background: white;
@@ -116,19 +111,19 @@ select{
         gap: 15px;
     }
     .expense input{
-        width: 50%;
+        width: 90%;
         font-size: 15px;
         font-weight: 500;
         padding: 12px;
     }
     select{
         padding: 12px;
-        width: 50%;
+        width: 90%;
         font-size: 15px;
         font-weight: 500;
     }
     .expense button{
-        width: 20%;
+        width: 90%;
     }
 }
 
