--- a/style.css
+++ b/style.css
@@ -102,7 +102,6 @@ select{
     }
     #p-div{
         width: 600px;
-
         margin: 50px auto;
         padding: 20px;
         font-size: 15px;
@@ -110,6 +109,7 @@ select{
     .expense{
         gap: 15px;
         padding-top: 45px;
+        width:50%;
     }
     .expense input{
         width: 90%;
