--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@
     font-family: "Poppins",sans-serif;
 }
 body{
-    background:rgb(27, 0, 149);
+    /* background:rgb(27, 0, 149); */
+    background:white;
 }
 nav{
     display: flex;
@@ -23,14 +24,15 @@ nav{
 }
 
 .header h1{
-    color: rgb(98, 255, 0);
+    /* color: rgb(98, 255, 0); */
+    color: rgb(27, 0, 149);
     font-size: 20px;
     font-weight: 600;
-    margin: 6px 0;
+    margin-top: 10px;
 }
 #p-div{
-    border: white solid 1px;
-    margin: 30px 10px;
+    /* border: rgb(27, 0, 149)solid 1px; */
+    margin: 10px 10px;
     padding: 10px;
     border-radius: 10px;
     font-size: 10px;
@@ -38,7 +40,7 @@ nav{
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
 }
 #p-div p{
-    color: rgb(98, 255, 0);
+    color: rgb(27, 0, 149));
 
 }
 #expense-header{
@@ -50,7 +52,7 @@ nav{
     flex-direction: column;
     gap: 5px;
     align-items: center;
-    margin: 10px auto;
+    margin: 0px auto;
     padding: 20px 5px;
     width: 70%;
     background: white;
@@ -83,12 +85,12 @@ select{
     margin-top: 10px;
     padding: 8px;
     width: 90%;
-    background: rgb(98, 255, 0);
+    background: rgb(27, 0, 149);
     border: none;
     border-radius: 8px;
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
     cursor: pointer;
-    color: rgb(27, 0, 149);
+    color:white;
 }
 .expense button:hover{
     background: rgb(27, 0, 149);
