--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ nav{
     border-radius: 10px;
     font-size: 10px;
     text-align: center;
-    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+    /* box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15); */
     width: 70%;
 }
 #p-div p{
