--- a/style.css
+++ b/style.css
@@ -67,13 +67,17 @@ nav{
     outline: none;
     border: solid 1px rgb(199, 199, 199);
     padding: 8px;
+
+}
+.expense input::placeholder{
+     color:rgb(27, 0, 149);
 }
 select{
     padding: 8px;
     border-radius: 8px;
     width: 90%;
     border: solid 1px rgb(199, 199, 199);
-    color: grey;
+    color: rgb(27, 0, 149);
     font-size: 10px;
     outline: none;
     cursor: pointer;
@@ -92,9 +96,10 @@ select{
     color:white;
 }
 .expense button:hover{
-    background: rgb(27, 0, 149);
-    color: rgb(98, 255, 0);
+    color: rgb(27, 0, 149);
+    background:white;
     transition: 0.3s ease;
+    border: solid 1px rgb(27, 0, 149);
 }
 @media (min-width: 768px) {
     nav{
