--- a/style.css
+++ b/style.css
@@ -101,6 +101,80 @@ select{
     transition: 0.3s ease;
     border: solid 1px rgb(27, 0, 149);
 }
+.dropdown{
+    margin-top: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+#duration{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 10px;
+}
+#btn{
+    margin-top: 5px;
+    padding: 8px;
+    width: 90px;
+    background: rgb(27, 0, 149);
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    color:white;
+}
+#btn:hover{
+    color: rgb(27, 0, 149);
+    background:white;
+    transition: 0.3s ease;
+    border: solid 1px rgb(27, 0, 149);
+}
+.dropdown-menu {
+    margin-top: 10px;
+    display: none;
+    background: rgb(27, 0, 149);
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    width: 90%;
+    padding: 5px 0;
+}
+.dropdown-menu.show {
+    display: block;
+}
+.dropdown-menu button{
+    width: 50px;
+    font-size: 8px;
+    padding: 5px;
+    border-radius: 8px;
+    border: none;
+    cursor: pointer;
+    color: rgb(27, 0, 149);
+    margin-left:20px;
+}
+.btn{
+    margin-top: 5px;
+    padding: 8px;
+    width: 70px;
+    background: rgb(27, 0, 149);
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    color:white;
+}
+.btn:hover{
+    color: rgb(27, 0, 149);
+    background:white;
+    transition: 0.3s ease;
+    border: solid 1px rgb(27, 0, 149);
+}
+.dropdown-menu button:hover{
+    color:white;
+    background: rgb(27, 0, 149);
+    border: solid 1px white;
+}
+
 @media (min-width: 768px) {
     nav{
         display: flex;
