--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ nav{
     justify-content: center;
     margin-bottom: 5px;
     padding-bottom: 3px;
+    position: relative;
 }
 .header img{
     width: 40px;
@@ -23,10 +24,19 @@ nav{
 }
 
 .header h1{
-    color: rgb(27, 0, 149);
+    color: rgb(92, 193, 92);
     font-size: 20px;
     font-weight: 600;
     margin-top: 10px;
+}
+nav::after{
+    content: "";
+    position: absolute;
+    width: 38%;
+    height: 1px;
+    background-color:rgb(27, 0, 149);
+    left: 2;
+    bottom: 6px;
 }
 #p-div{
     border:rgb(27, 0, 149) solid 1px;
@@ -49,9 +59,9 @@ nav{
     margin-bottom: 10px;
 }
 .popup{
-    color: white;
+    color: rgb(27, 0, 149);
     text-align: center;
-    background:red;
+    background:rgb(92, 193, 92);
     width: 70%;
     margin: 20px auto;
     border-radius: 5px;
@@ -103,19 +113,13 @@ select{
     margin-top: 10px;
     padding: 8px;
     width: 90%;
-    background: rgb(27, 0, 149);
+    background: rgb(92, 193, 92);
     border: none;
     border-radius: 8px;
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
     cursor: pointer;
-    color:white;
+    color:rgb(27, 0, 149);
     font-size: 10px;
-}
-.expense button:hover{
-    color: rgb(27, 0, 149);
-    background:white;
-    transition: 0.3s ease;
-    border: solid 1px rgb(27, 0, 149);
 }
 .dropdown{
     margin-top: 5px;
@@ -138,19 +142,12 @@ select{
     margin-top: 5px;
     padding: 8px;
     width: 90px;
-    background: white;
+    background: rgb(92, 193, 92);
     border: none;
     border-radius: 8px;
     cursor: pointer;
     color: rgb(27, 0, 149);
-    border: solid 1px rgb(27, 0, 149);
     font-size: 10px;
-}
-#btn:hover{
-    color:white;
-    background:rgb(27, 0, 149) ;
-    transition: 0.3s ease;
-    border: solid 1px rgb(27, 0, 149);
 }
 .dropdown-menu {
     margin-top: 10px;
@@ -173,11 +170,25 @@ select{
     border-radius: 8px;
     border: none;
     cursor: pointer;
-    background: white;
+    background:white;
     color: rgb(27, 0, 149);
     margin: 3px 0;
     border: solid 1px rgb(27, 0, 149);
 }
+#show-all{
+    width: 50px;
+    font-size: 8px;
+    padding: 5px;
+    border-radius: 8px;
+    border: none;
+    cursor: pointer;
+    background: white;
+    color: rgb(27, 0, 149);
+    margin: 3px 0;
+    border: solid 1px rgb(27, 0, 149);
+    display: none;
+}
+
 .btn{
     margin-top: 5px;
     padding: 8px;
@@ -205,9 +216,9 @@ select{
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 25px;
     gap: 10px;
-    padding: 40px 0;
+    padding-bottom: 20px;
     border-radius: 10px;
 }
 .expense-card{
@@ -220,22 +231,23 @@ select{
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+    min-height: 200px;
 }
+
 .delete-btn{
     padding: 5px;
     width: 80%;
-    background:rgb(158, 3, 3);
+    background:rgb(92, 193, 92);
     border-radius: 10px;
-    color: white;
+    color:rgb(27, 0, 149);
     border: none;
     margin-top: 3px;
     cursor: pointer;
     font-size: 10px;
 }
 .delete-btn:hover{
-    background: white;
-    color: red;
-    border: red 1px solid;
+    background: red;
+    color: white;
     transition: ease 0.3s;
 }
 .expense-text{
@@ -314,6 +326,11 @@ select{
         padding: 8px;
         margin-left: 10px;
     }
+    #show-all{
+        width: 90px;
+        font-size: 10px;
+        padding: 8px;
+    }
     .expense-list {
         display: flex;
         flex-wrap: wrap;
@@ -366,6 +383,7 @@ select{
         font-size: 10px;
         padding: 12px;
         margin-left: 20px;
+        margin-top: 50px;
     }
     .expense-list{
         display: flex;
@@ -378,5 +396,11 @@ select{
     }
     #total-div{
         width: 20%;
+    }
+     #show-all{
+        width: 120px;
+        font-size: 10px;
+        padding: 12px;
+        margin-top: 50px;
     }
 }
