--- a/style.css
+++ b/style.css
@@ -24,19 +24,10 @@ nav{
 }
 
 .header h1{
-    color: rgb(92, 193, 92);
+    color: rgb(27, 0, 149);
     font-size: 20px;
     font-weight: 600;
     margin-top: 10px;
-}
-nav::after{
-    content: "";
-    position: absolute;
-    width: 38%;
-    height: 1px;
-    background-color:rgb(27, 0, 149);
-    left: 2;
-    bottom: 6px;
 }
 #p-div{
     border:rgb(27, 0, 149) solid 1px;
@@ -45,7 +36,6 @@ nav::after{
     border-radius: 10px;
     font-size: 10px;
     text-align: center;
-    /* box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15); */
     width: 70%;
 }
 #p-div p{
@@ -141,13 +131,18 @@ select{
 #btn{
     margin-top: 5px;
     padding: 8px;
-    width: 90px;
-    background: rgb(92, 193, 92);
+    width: 70px;
+    background: white;
     border: none;
     border-radius: 8px;
     cursor: pointer;
     color: rgb(27, 0, 149);
     font-size: 10px;
+    border: solid 1px rgb(27, 0, 149);
+}
+#btn:hover{
+    background: rgb(27, 0, 149);
+    color: white;
 }
 .dropdown-menu {
     margin-top: 10px;
@@ -187,6 +182,10 @@ select{
     margin: 3px 0;
     border: solid 1px rgb(27, 0, 149);
     display: none;
+}
+#show-all:hover{
+    background: rgb(27, 0, 149);
+    color: white;
 }
 
 .btn{
