--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ nav{
 }
 #p-div{
     border:rgb(27, 0, 149) solid 1px;
-    margin: 20px auto;
+    margin: 40px auto;
     padding: 10px;
     border-radius: 10px;
     font-size: 10px;
@@ -46,7 +46,7 @@ nav{
     color: rgb(27, 0, 149);
     text-align: center;
     font-size: 15px;
-    margin-bottom: 10px;
+    margin-bottom: 25px;
 }
 .popup{
     color: rgb(27, 0, 149);
@@ -66,7 +66,7 @@ nav{
     flex-direction: column;
     gap: 5px;
     align-items: center;
-    margin: 0px auto;
+    margin: 30px auto;
     padding: 20px 5px;
     width: 70%;
     background: white;
@@ -132,11 +132,11 @@ select{
     margin-top: 5px;
     padding: 8px;
     width: 70px;
-    background: white;
+    background: rgb(27, 0, 149);
     border: none;
     border-radius: 8px;
     cursor: pointer;
-    color: rgb(27, 0, 149);
+    color: white;
     font-size: 10px;
     border: solid 1px rgb(27, 0, 149);
 }
@@ -186,8 +186,8 @@ select{
 #show-all:hover{
     background: rgb(27, 0, 149);
     color: white;
+    transition: 0.5s ease;
 }
-
 .btn{
     margin-top: 5px;
     padding: 8px;
@@ -197,12 +197,6 @@ select{
     border-radius: 8px;
     cursor: pointer;
     color:white;
-}
-.btn:hover{
-    color: rgb(27, 0, 149);
-    background:white;
-    transition: 0.3s ease;
-    border: solid 1px rgb(27, 0, 149);
 }
 .dropdown-menu button:hover{
     color:white;
@@ -237,7 +231,7 @@ select{
     padding: 5px;
     width: 80%;
     background:rgb(92, 193, 92);
-    border-radius: 10px;
+    border-radius: 8px;
     color:rgb(27, 0, 149);
     border: none;
     margin-top: 3px;
@@ -261,9 +255,10 @@ select{
 }
 #total-div{
     border: solid 1px rgb(27, 0, 149);
-    width: 50%;
+    width: 40%;
     margin: 15px auto;
-    border-radius: 10px;
+    border-radius: 8px;
+    padding: 8px;
 }
 #total{
     font-size: 15px;
@@ -382,7 +377,7 @@ select{
         font-size: 10px;
         padding: 12px;
         margin-left: 20px;
-        margin-top: 50px;
+        margin-top: 20px;
     }
     .expense-list{
         display: flex;
@@ -400,6 +395,6 @@ select{
         width: 120px;
         font-size: 10px;
         padding: 12px;
-        margin-top: 50px;
+        margin-top: 20px;
     }
 }
